--- a/src/components/Event/list/UpcomingEvents.css
+++ b/src/components/Event/list/UpcomingEvents.css
@@ -1,4 +1,4 @@
-/* Upcoming Events Section */
+/* 
 .event-upcoming-section {
   flex: 2;
   margin-right: 20px;
@@ -11,13 +11,13 @@
   align-items: center;
   font-size: 32px;
   font-style: italic;
-}
+} */
 
 /* .event-add
 {
   display: flex;
   flex-direction: row;
-} */
+} 
 
 .event-add-btn {
   background-color: #1eb2a6ec;
@@ -35,7 +35,7 @@
   align-items: center;
   gap: 10px;
   margin-bottom: 20px;
-} */
+} 
 
 .event-header label {
   display: flex;
@@ -115,7 +115,7 @@
   cursor: pointer;
 }
 
-/* Responsive Styles */
+/* Responsive Styles 
 @media (max-width: 768px) {
   .event-header {
     font-size: 18px;
@@ -135,7 +135,7 @@
 
   .event-image {
     width: 100%;
-    height: 180px; /* Adjust height for smaller screens */
+    height: 180px; /* Adjust height for smaller screens 
   }
 }
 
@@ -150,5 +150,68 @@
 
   .event-view-btn {
     padding: 6px 12px;
+  }
+}*/
+
+
+
+
+
+.events-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 20px;
+  width: 4000px;
+}
+
+.event-card {
+  display: flex;
+  flex-direction: row;
+  background-color: #fff;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.349);
+  width:1000px;
+}
+
+.event-image {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin-left: 20px;
+  margin-top: 15px;
+}
+
+.event-details {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.event-details h4 {
+  font-size: 25px;
+  font-style: italic;
+}
+
+.event-button {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
+@media (max-width: 768px) {
+  .events-container {
+    grid-template-columns: 1fr;
+  }
+
+  .event-card {
+    flex-direction: column;
+  }
+
+  .event-image {
+    width: 100%;
+    height: auto;
   }
 }
